--- a/you_are_real/static/shit.html
+++ b/you_are_real/static/shit.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <script src="shit.js" type="text/javascript"></script>
+            <link rel="stylesheet" href="shit.css">
         </head>
     <body onload="init()">
         <svg id="Canvas"
