Use polling loop

--- a/you_are_real/static/shit.html
+++ b/you_are_real/static/shit.html
@@ -8,6 +8,7 @@
         <svg id="Canvas"
             height=100%
             onclick="handleClick(event)"
+            onload="init()"
             onmousemove="handleMouseMove(event)"
             width=100%
             xmlns="http://www.w3.org/2000/svg">
