--- a/you_are_real/static/shit.html
+++ b/you_are_real/static/shit.html
@@ -5,14 +5,12 @@
             <link rel="stylesheet" href="shit.css">
         </head>
     <body onload="init()">
-        <svg id="Canvas"
+        <svg id="DrawArea"
             height=100%
             onclick="handleClick(event)"
-            onload="init()"
             onmousemove="handleMouseMove(event)"
             width=100%
             xmlns="http://www.w3.org/2000/svg">
-            <circle id="Target" cx="300" cy="100" r="50"/>
         </svg>            
     </body>
 </html>
