--- a/you_are_real/static/shit.html
+++ b/you_are_real/static/shit.html
@@ -10,6 +10,7 @@
             onmousemove="handleMouseMove(event)"
             width=100%
             xmlns="http://www.w3.org/2000/svg">
+            <text id="IntroText">GET YOUR SHIT TOGETHER</text>
         </svg>            
     </body>
 </html>
