--- a/you_are_real/static/index.html
+++ b/you_are_real/static/index.html
@@ -3,13 +3,13 @@
         <head>
             <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
             <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
-            <meta property="og:image" content="/static/image1.jpg" />
+            <meta property="og:image" content="image1.jpg" />
             <meta property="og:type" content="website" />
             <meta property="og:url" content="http://doyouthinkyouarereal.com" />
             <meta property="og:title" content="" />
             <meta property="og:description" content="" />
-            <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
-            <script src="/static/check_open.js" type="text/javascript"></script>
+            <link rel="stylesheet" href="base.css" type="text/css" charset="utf-8" />
+            <script src="check_open.js" type="text/javascript"></script>
         </head>
     <body onload="checkLoad()"></body>
 </html>
