--- a/you_are_real/static/open.html
+++ b/you_are_real/static/open.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
+<html>
 
-<div class="background">
-    <div id="QuestionForm">
-        <div id="MainText">Who are you?</div>
-        <div id="AnswerInput" contenteditable="True"></div>
-        <button class="button" onclick="submitForm()" type="button">Volunteer</button>
+<head>
+    <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
+    <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
+    <meta property="og:image" content="image1.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://doyouthinkyouarereal.com" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <link rel="stylesheet" href="base.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="open.css" type="text/css" charset="utf-8" />
+</head>
+
+<body>
+    <div class="background">
+        <div id="MainText">Do you think you are real?</div>
     </div>
+</body>
+
+</html>
