--- a/closed.html
+++ b/closed.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="outer-container background">
-        <div class="TextBox">
+        <div class="text-box text-base">
             <h1>OPENING HOURS</h1>
             <h2> 8:00 16:00 ALL DAYS</h2>
         </div>
