--- a/closed.html
+++ b/closed.html
@@ -18,5 +18,10 @@
             <h1>OPENING HOURS</h1>
             <h2> 8:00 16:00 ALL DAYS</h2>
         </div>
+    </div>
+    <div>
+        <div class="TextBox">
+            <a href="shit.html" class="shitlink">Play a game until then</a>
+        </div>
     </div>    
 </body>
