new style closed page

--- a/closed.html
+++ b/closed.html
@@ -15,13 +15,11 @@
 <body>
     <div class="outer-container background">
         <div class="text-box text-base">
-            <h1>OPENING HOURS</h1>
-            <h2> 8:00 16:00 ALL DAYS</h2>
+            <h1>CLOSED</h1>
+            <h2> opening hours 8:00-16:00 all days</h2>
         </div>
+        <div class="text-box">
+            <a href="shit.html" class="text-base shitlink">CLICK HERE TO PLAY A GAME IN THE MEANTIME</a>
+        </div>    
     </div>
-    <div>
-        <div class="TextBox">
-            <a href="shit.html" class="shitlink">Play a game until then</a>
-        </div>
-    </div>    
 </body>
