--- a/open.html
+++ b/open.html
@@ -11,6 +11,8 @@
     <meta property="og:description" content="" />
     <link rel="stylesheet" href="base.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="open.css" type="text/css" charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
