--- a/shit.html
+++ b/shit.html
@@ -3,6 +3,8 @@
         <head>
             <script src="shit.js" type="text/javascript"></script>
             <link rel="stylesheet" href="shit.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         </head>
     <body onload="init()">
         <svg id="DrawArea"
