--- a/studio.html
+++ b/studio.html
@@ -20,18 +20,18 @@
 
 
   <div class="gallery">
-    <img src="/image/1.JPG" alt="Photo 1" onclick="openImage('/image/1.JPG')">
-    <img src="/image/2.jpg" alt="Photo 2" onclick="openImage('/image/2.JPG')">
-    <img src="/image/3.jpg" alt="Photo 3" onclick="openImage('/image/3.JPG')">
-    <img src="/image/4.jpg" alt="Photo 4" onclick="openImage('/image/4.JPG')">
-    <img src="/image/5.jpg" alt="Photo 3" onclick="openImage('/image/5.JPG')">
-    <img src="/image/6.jpg" alt="Photo 3" onclick="openImage('/image/6.JPG')">
-    <img src="/image/9.jpg" alt="Photo 3" onclick="openImage('/image/9.JPG')">
-    <img src="/image/11.jpg" alt="Photo 3" onclick="openImage('/image/11.JPG')">
-    <img src="/image/12.jpg" alt="Photo 3" onclick="openImage('/image/12.JPG')">
-    <img src="/image/13.jpg" alt="Photo 3" onclick="openImage('/image/13.JPG')">
-    <img src="/image/15.jpg" alt="Photo 3" onclick="openImage('/image/15.JPG')">
-    <img src="/image/16.jpg" alt="Photo 3" onclick="openImage('/image/16.JPG')">
+    <img src="/image/1.JPG" alt="Photo " onclick="openImage('/image/1.JPG')">
+    <img src="/image/2.jpg" alt="Photo " onclick="openImage('/image/2.JPG')">
+    <img src="/image/3.jpg" alt="Photo " onclick="openImage('/image/3.JPG')">
+    <img src="/image/4.jpg" alt="Photo " onclick="openImage('/image/4.JPG')">
+    <img src="/image/5.jpg" alt="Photo " onclick="openImage('/image/5.JPG')">
+    <img src="/image/6.jpg" alt="Photo " onclick="openImage('/image/6.JPG')">
+    <img src="/image/9.jpg" alt="Photo " onclick="openImage('/image/9.JPG')">
+    <img src="/image/11.jpg" alt="Photo " onclick="openImage('/image/11.JPG')">
+    <img src="/image/12.jpg" alt="Photo " onclick="openImage('/image/12.JPG')">
+    <img src="/image/13.jpg" alt="Photo " onclick="openImage('/image/13.JPG')">
+    <img src="/image/15.jpg" alt="Photo " onclick="openImage('/image/15.JPG')">
+    <img src="/image/16.jpg" alt="Photo " onclick="openImage('/image/16.JPG')">
 
 
 
