--- a/studio.html
+++ b/studio.html
@@ -20,18 +20,18 @@
 
 
   <div class="gallery">
-    <img src="/image/1.JPG" alt="Photo " onclick="openImage('/image/1.JPG')">
-    <img src="/image/2.jpg" alt="Photo " onclick="openImage('/image/2.JPG')">
-    <img src="/image/3.jpg" alt="Photo " onclick="openImage('/image/3.JPG')">
-    <img src="/image/4.jpg" alt="Photo " onclick="openImage('/image/4.JPG')">
-    <img src="/image/5.jpg" alt="Photo " onclick="openImage('/image/5.JPG')">
-    <img src="/image/6.jpg" alt="Photo " onclick="openImage('/image/6.JPG')">
-    <img src="/image/9.jpg" alt="Photo " onclick="openImage('/image/9.JPG')">
-    <img src="/image/11.jpg" alt="Photo " onclick="openImage('/image/11.JPG')">
-    <img src="/image/12.jpg" alt="Photo " onclick="openImage('/image/12.JPG')">
-    <img src="/image/13.jpg" alt="Photo " onclick="openImage('/image/13.JPG')">
-    <img src="/image/15.jpg" alt="Photo " onclick="openImage('/image/15.JPG')">
-    <img src="/image/16.jpg" alt="Photo " onclick="openImage('/image/16.JPG')">
+    <img src="/images/1.JPG" alt="Photo " onclick="openImage('/images/1.JPG')">
+    <img src="/images/2.jpg" alt="Photo " onclick="openImage('/images/2.JPG')">
+    <img src="/images/3.jpg" alt="Photo " onclick="openImage('/images/3.JPG')">
+    <img src="/images/4.jpg" alt="Photo " onclick="openImage('/images/4.JPG')">
+    <img src="/images/5.jpg" alt="Photo " onclick="openImage('/images/5.JPG')">
+    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images6.JPG')">
+    <img src="/images/9.jpg" alt="Photo " onclick="openImage('/images/9.JPG')">
+    <img src="/images/11.jpg" alt="Photo " onclick="openImage('/images/11.JPG')">
+    <img src="/images/12.jpg" alt="Photo " onclick="openImage('/images/12.JPG')">
+    <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.JPG')">
+    <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.JPG')">
+    <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.JPG')">
 
 
 
