Working timecheck app

--- a/static/studio.html
+++ b/static/studio.html
@@ -11,7 +11,7 @@
         <header>
 
             <div class="bnav">
-                <a href="open.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="studio.html">STUDIO</a>
                
             </div>
