--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
             <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
             <meta property="og:image" content="image1.jpg" />
@@ -9,7 +11,7 @@
             <meta property="og:title" content="" />
             <meta property="og:description" content="" />
             <link rel="stylesheet" href="base.css" type="text/css" charset="utf-8" />
-            <script src="check_open.js" type="text/javascript"></script>
+            <script src="check-open.js" type="text/javascript"></script>
         </head>
     <body onload="checkLoad()"></body>
 </html>
