--- a/static/shit.html
+++ b/static/shit.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <script src="shit.js" type="text/javascript"></script>
-            <link rel="stylesheet" href="shit.css">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
 
-        </head>
-    <body onload="init()">
-        <svg id="DrawArea"
-            height=100%
-            onmousemove="handleMouseMove(event)"
-            width=100%
-            xmlns="http://www.w3.org/2000/svg">
-            <text id="IntroText">GET YOUR SHIT TOGETHER</text>
-        </svg>            
-    </body>
+<head>
+    <script src="shit.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="shit.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body onload="init()">
+    <svg id="DrawArea" height=100% onmousemove="handleMouseMove(event)" width=100% xmlns="http://www.w3.org/2000/svg">
+        <text id="IntroText">GET YOUR SHIT TOGETHER</text>
+    </svg>
+</body>
+
 </html>
