--- a/shit.html
+++ b/shit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <script src="shit.js" type="text/javascript"></script>
-            <link rel="stylesheet" href="shit.css">
+            <script src="js/shit.js" type="text/javascript"></script>
+            <link rel="stylesheet" href="css/shit.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         </head>
