--- a/index.html
+++ b/index.html
@@ -1,14 +1,75 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
-            <meta property="og:image" content="image1.jpg" />
-            <meta property="og:type" content="website" />
-            <meta property="og:url" content="http://doyouthinkyouarereal.com" />
-            <meta property="og:title" content="" />
-            <meta property="og:description" content="" />
-            <link rel="stylesheet" type="text/css" charset="utf-8" />
-            <script src="check_open.js" type="text/javascript"></script>
-        </head>
-    <body onload="checkLoad()"></body>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
+    <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
+    <meta property="og:image" content="image1.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://doyouthinkyouarereal.com" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <link rel="stylesheet" href="/css/index.css" type="text/css" charset="utf-8" />
+    <title>DO YOU THINK YOU ARE REAL</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+
+
+</head>
+<body>
+    <button class="openbtn" onclick="openNav()">&#9776;</button>
+
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">HOME</a>
+        <a href="studio.html">STUDIO</a>
+      </div>
+    <div id="background"></div>
+    <div id="text-container"></div>
+    <script>
+        const textArray = [
+
+        "DO YOU THINK YOU ARE REAL",
+                "¿CREES QUE ERES REAL",
+                "你认为你是真实的吗",
+                "PENSEZ VOUS QUE VOUS ÊTES RÉEL",
+                "MYŚLISZ ŻE JESTEŚ PRAWDZIWY",
+               " क्या आपको लगता है कि आप असली",
+                "ΝΟΜΙΖΕΙΣ ΟΤΙ ΕΙΣΑΙ ΠΡΑΓΜΑΤΙΚΟΣ",
+                "自分が本物だと思いますか",
+                "هل تعتقد أنك حقيقي؟",
+                "ВЫ ДУМАЕТЕ ЧТО ТЫ НАСТОЯЩИЙ",
+                "Je, unaona wewe ni halisi",
+                "당신은 진짜라고 생각하세요",
+                "Glaubst du dass du echt bist",
+                "Tror du att du är verklig",
+                "PENSI DI ESSERE REALE",
+                "He whakaaro koe kei te tino koe",
+                "44 4F 20 59 4F 55 20 54 48 49 4E 4B 20 59 4F 55 20 41 52 45 20 52 45 41 4C"
+        ];
+
+        const textContainer = document.getElementById("text-container");
+        let currentIndex = 0;
+
+        function changeLanguage() {
+            textContainer.textContent = textArray[currentIndex];
+            currentIndex = (currentIndex + 1) % textArray.length;
+        }
+
+        setInterval(changeLanguage, 1500); // Change text every 1,5 
+    </script>
+
+<script>
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+    }
+  
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+    }
+  </script>
+</body>
 </html>
