--- a/studio.html
+++ b/studio.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="studio.css">
+  <link rel="stylesheet" href="/css/studio.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100;300&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <title>Studio</title>
 </head>
 <body>
 
-        <header>
-
-            <div class="bnav">
-                <a href="open.html">HOME</a>
-                <a href="studio.html">STUDIO</a>
-               
-            </div>
-
-        </header>
-
-
+  
   <div class="gallery">
     <img src="/images/1.JPG" alt="Photo " onclick="openImage('/images/1.JPG')">
     <img src="/images/2.jpg" alt="Photo " onclick="openImage('/images/2.JPG')">
     <img src="/images/3.jpg" alt="Photo " onclick="openImage('/images/3.JPG')">
     <img src="/images/4.jpg" alt="Photo " onclick="openImage('/images/4.JPG')">
     <img src="/images/5.jpg" alt="Photo " onclick="openImage('/images/5.JPG')">
-    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images6.JPG')">
+    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images/6.JPG')">
     <img src="/images/9.jpg" alt="Photo " onclick="openImage('/images/9.JPG')">
     <img src="/images/11.jpg" alt="Photo " onclick="openImage('/images/11.JPG')">
     <img src="/images/12.jpg" alt="Photo " onclick="openImage('/images/12.JPG')">
     <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.JPG')">
     <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.JPG')">
     <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.JPG')">
-
-
-
   </div> 
+
+  <button class="openbtn" onclick="openNav()">&#9776;</button>
+
+  <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html">Home</a>
+      <a href="studio.html">STUDIO</a>
+  
+      <script>
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "250px";
+        }
+      
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
+      </script>
   <script>
     function openImage(imageUrl) {
       window.open(imageUrl, '_blank');
     }
   </script>
+
 </body>
 </html>
