--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+EAN13+Text&family=Press+Start+2P&display=swap" rel="stylesheet">
+
 
 
 </head>
@@ -25,8 +29,14 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">HOME</a>
-        <a href="studio.html">STUDIO</a>
+        <a href="studio.html">STUDIO</a>      
       </div>
+
+      <div id="bottom-link" style="display: none;">
+        <a href="/shit.html">GET YOUR SHIT TOGETHER</a>
+    </div>
+    
+
     <div id="background"></div>
     <div id="text-container"></div>
     <script>
@@ -70,6 +80,20 @@
     function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
     }
+  </script>
+
+  <script>
+
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("bottom-link").style.display = "block"; // Show the link
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("bottom-link").style.display = "none"; // Hide the link
+}
+
   </script>
 </body>
 </html>
