--- a/studio.html
+++ b/studio.html
@@ -6,6 +6,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100;300&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+EAN13+Text&family=Press+Start+2P&display=swap" rel="stylesheet">
   <title>Studio</title>
 </head>
 <body>
@@ -24,7 +27,15 @@
     <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.JPG')">
     <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.JPG')">
     <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.JPG')">
+    <img src="/images/17.jpg" alt="Photo " onclick="openImage('/images/17.JPG')">
+    <img src="/images/18.jpg" alt="Photo " onclick="openImage('/images/18.JPG')">
+
+
   </div> 
+
+  <div id="bottom-link" style="display: none;">
+    <a href="/shit.html">GET YOUR SHIT TOGETHER</a>
+</div>
 
   <button class="openbtn" onclick="openNav()">&#9776;</button>
 
@@ -32,6 +43,8 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="studio.html">STUDIO</a>
+
+      
   
       <script>
         function openNav() {
@@ -47,6 +60,20 @@
       window.open(imageUrl, '_blank');
     }
   </script>
+
+<script>
+
+  function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("bottom-link").style.display = "block"; // Show the link
+  }
+  
+  function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("bottom-link").style.display = "none"; // Hide the link
+  }
+  
+    </script>
 
 </body>
 </html>
