--- a/studio.html
+++ b/studio.html
@@ -15,20 +15,23 @@
 
   
   <div class="gallery">
-    <img src="/images/1.JPG" alt="Photo " onclick="openImage('/images/1.JPG')">
-    <img src="/images/2.jpg" alt="Photo " onclick="openImage('/images/2.JPG')">
-    <img src="/images/3.jpg" alt="Photo " onclick="openImage('/images/3.JPG')">
-    <img src="/images/4.jpg" alt="Photo " onclick="openImage('/images/4.JPG')">
-    <img src="/images/5.jpg" alt="Photo " onclick="openImage('/images/5.JPG')">
-    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images/6.JPG')">
-    <img src="/images/9.jpg" alt="Photo " onclick="openImage('/images/9.JPG')">
-    <img src="/images/11.jpg" alt="Photo " onclick="openImage('/images/11.JPG')">
-    <img src="/images/12.jpg" alt="Photo " onclick="openImage('/images/12.JPG')">
-    <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.JPG')">
-    <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.JPG')">
-    <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.JPG')">
-    <img src="/images/17.jpg" alt="Photo " onclick="openImage('/images/17.JPG')">
-    <img src="/images/18.jpg" alt="Photo " onclick="openImage('/images/18.JPG')">
+    <img src="/images/21.jpg" alt="Photo " onclick="openImage('/images/21.jpg')">
+    <img src="/images/2.jpg" alt="Photo " onclick="openImage('/images/2.jpg')">
+    <img src="/images/3.jpg" alt="Photo " onclick="openImage('/images/3.jpg')">
+    <img src="/images/4.jpg" alt="Photo " onclick="openImage('/images/4.jpg')">
+    <img src="/images/5.jpg" alt="Photo " onclick="openImage('/images/5.jpg')">
+    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images/6.jpg')">
+    <img src="/images/9.jpg" alt="Photo " onclick="openImage('/images/9.jpg')">
+    <img src="/images/11.jpg" alt="Photo " onclick="openImage('/images/11.jpg')">
+    <img src="/images/12.jpg" alt="Photo " onclick="openImage('/images/12.jpg')">
+    <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.jpg')">
+    <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.jpg')">
+    <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.jpg')">
+    <img src="/images/17.jpg" alt="Photo " onclick="openImage('/images/17.jpg')">
+    <img src="/images/18.jpg" alt="Photo " onclick="openImage('/images/18.jpg')">
+    <img src="/images/19.jpg" alt="Photo " onclick="openImage('/images/19.jpg')">
+    <img src="/images/20.png" alt="Photo " onclick="openImage('/images/20.png')">
+
 
 
   </div> 
