--- a/studio.html
+++ b/studio.html
@@ -43,7 +43,7 @@
   <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">HOME</a>
-      <a href="photo.html">STUDIO</a>
+      <a href="studio.html">STUDIO</a>
       <a href="text.html">TEXT</a>
       <a href="shit.html">GET YOUR SHIT TOGETHER</a>
 
