--- a/text.html
+++ b/text.html
@@ -81,7 +81,7 @@
         <h2>سنبقى هنا</h2>
         <div class="article-content">
             <p> سأقتني صاروخًا لنحلّق به معًا 
-               <br> و مفاعلًا نوويًا، ولكن لست متأكدًا لماذا
+               <br> و مفاعلًا نوويًا، لكن لست متأكدًا لماذا
                <br>ولكن قد نحتاجه
                <br> سنستضيف طفلةً صغيرة
                <br> سنختار لها اسمًا لاحقًا
