change folders and main page and shit game

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+
 <!DOCTYPE html>
+
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <meta name="msvalidate.01" content="1723E8BFFCC3E474B3C4CCE87D2E6DE9" />
-    <meta property="og:image" content="image1.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://doyouthinkyouarereal.com" />
     <meta property="og:title" content="" />
@@ -33,47 +33,10 @@
     </div>
     <div id="background"></div>
     <div id="text-container"></div>
-    <script>
-        const textArray = [
 
-        "DO YOU THINK YOU ARE REAL",
-                "¿CREES QUE ERES REAL",
-                "你认为你是真实的吗",
-                "PENSEZ VOUS QUE VOUS ÊTES RÉEL",
-                "MYŚLISZ ŻE JESTEŚ PRAWDZIWY",
-               " क्या आपको लगता है कि आप असली",
-                "ΝΟΜΙΖΕΙΣ ΟΤΙ ΕΙΣΑΙ ΠΡΑΓΜΑΤΙΚΟΣ",
-                "自分が本物だと思いますか",
-                "هل تعتقد أنك حقيقي؟",
-                "ВЫ ДУМАЕТЕ ЧТО ТЫ НАСТОЯЩИЙ",
-                "Je, unaona wewe ni halisi",
-                "당신은 진짜라고 생각하세요",
-                "Glaubst du dass du echt bist",
-                "Tror du att du är verklig",
-                "PENSI DI ESSERE REALE",
-                "He whakaaro koe kei te tino koe",
-                "44 4F 20 59 4F 55 20 54 48 49 4E 4B 20 59 4F 55 20 41 52 45 20 52 45 41 4C"
-        ];
 
-        const textContainer = document.getElementById("text-container");
-        let currentIndex = 0;
-
-        function changeLanguage() {
-            textContainer.textContent = textArray[currentIndex];
-            currentIndex = (currentIndex + 1) % textArray.length;
-        }
-
-        setInterval(changeLanguage, 1500); // Change text every 1,5 
-    </script>
-
-<script>
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-    }
-  
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }
-  </script>
+    <script src="js/index.js">
+        
+</script>
 </body>
 </html>
