--- a/shit.html
+++ b/shit.html
@@ -10,7 +10,6 @@
     <body
 
     onload="init()">
-   
 
         <svg id="DrawArea"
             height=100%
@@ -24,7 +23,8 @@
         <img id="frame" src="images/frameCrop.png" alt=" ">
        
     </div>
-
+    <div id="background"></div>
+    <div id="text-container"></div>
 
     </body>
 </html>
