--- a/text.html
+++ b/text.html
@@ -124,8 +124,8 @@
             <br>   سأفكّر فيما بعد 
         </p>
     </div>
-
 </div>
+
 <div class="article">
     <h2>العالم يحترق</h2>
     <div class="article-content">
@@ -146,24 +146,12 @@
             <br> فالقبلُة قد تطول لسنوات وسنوات 
             <br> بأمكانك هناك مراقبة التفاصيل بدقة 
             <br> حيث لاتضيع اللحظة
-            <br> ولاتنتهي التفاصيل 
-        
-
-        
-
-
-
+            <br> ولاتنتهي التفاصيل
         </p>
     </div>
 
-    <script>
-        const articles = document.querySelectorAll('.article');
-        articles.forEach((article) => {
-            const content = article.querySelector('.article-content');
-            article.addEventListener('click', () => {
-                content.style.display = content.style.display === 'none' ? 'block' : 'none';
-            });
-        });
-    </script>
+    <script src="js/text.js"></script>
+
 </body>
+
 </html>
