--- a/studio.html
+++ b/studio.html
@@ -48,19 +48,8 @@
       <a href="shit.html">GET YOUR SHIT TOGETHER</a>
 
 
-      <script>
-        function openNav() {
-          document.getElementById("mySidenav").style.width = "250px";
-        }
-      
-        function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-        }
-      </script>
-  <script>
-    function openImage(imageUrl) {
-      window.open(imageUrl, '_blank');
-    }
+      <script src="js/studio.js">
+        
   </script>
 
 <script>
