the new website

--- a/html/night_version/shit/shit.html
+++ b/html/night_version/shit/shit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <script src="js/shit.js" type="text/javascript"></script>
-            <link rel="stylesheet" href="css/shit.css">
+            <script src="shit.js" type="text/javascript"></script>
+            <link rel="stylesheet" href="shit.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>GET YOUR SHIT TOGETHER</title>
 
@@ -20,7 +20,7 @@
           
         </svg>  
     <div>
-        <img id="frame" src="images/frameCrop.png" alt=" ">
+        <img id="frame" src="frameCrop.png" alt=" ">
        
     </div>
     <div id="background"></div>
