delete shit from main page

--- a/html/night_version/shit/shit.html
+++ b/html/night_version/shit/shit.html
@@ -20,7 +20,7 @@
           
         </svg>  
     <div>
-        <img id="frame" src="frameCrop.png" alt=" ">
+        <img id="frame" src="frame.png" alt=" ">
        
     </div>
     <div id="background"></div>
