fix inedx day version

--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -1,4 +1,16 @@
+<!-- بسم الله الرحمن الرحيم -->
+<!--        _                             _   _     _       _    
+  __| | ___    _   _  ___  _   _  | |_| |__ (_)_ __ | | __
+ / _` |/ _ \  | | | |/ _ \| | | | | __| '_ \| | '_ \| |/ /
+| (_| | (_) | | |_| | (_) | |_| | | |_| | | | | | | |   < 
+ \__,_|\___/   \__, |\___/ \__,_|  \__|_| |_|_|_| |_|_|\_\
+ _   _  ___  _ |___/  __ _ _ __ ___   _ __ ___  __ _| |   
+| | | |/ _ \| | | |  / _` | '__/ _ \ | '__/ _ \/ _` | |   
+| |_| | (_) | |_| | | (_| | | |  __/ | | |  __/ (_| | |   
+ \__, |\___/ \__,_|  \__,_|_|  \___| |_|  \___|\__,_|_|   
+ |___/                              
 
+-->
 <!DOCTYPE html>
 
 <html lang="ar">
@@ -8,25 +20,23 @@
     <meta charset="UTF-8">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://doyouthinkyouarereal.com" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="what is real?" />
+    <meta property="og:description" content="Explore illusions, question perception, and ponder the essence of existence in a concise journey of curiosity" />
     <link rel="stylesheet" href="/css/index.css" type="text/css" charset="utf-8" />
     <title>DO YOU THINK YOU ARE REAL</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <button class="openbtn" onclick="openNav()">&#9776;</button>
 
-    <div id="mySidenav" class="sidenav">
+    <div id="side_bar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">HOME</a>
         <a href="studio.html">STUDIO</a>
         <a href="text.html">TEXT</a>
-  
-
       </div>
   
     </div>
