--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -1,16 +1,4 @@
 <!-- بسم الله الرحمن الرحيم -->
-<!--        _                             _   _     _       _    
-  __| | ___    _   _  ___  _   _  | |_| |__ (_)_ __ | | __
- / _` |/ _ \  | | | |/ _ \| | | | | __| '_ \| | '_ \| |/ /
-| (_| | (_) | | |_| | (_) | |_| | | |_| | | | | | | |   < 
- \__,_|\___/   \__, |\___/ \__,_|  \__|_| |_|_|_| |_|_|\_\
- _   _  ___  _ |___/  __ _ _ __ ___   _ __ ___  __ _| |   
-| | | |/ _ \| | | |  / _` | '__/ _ \ | '__/ _ \/ _` | |   
-| |_| | (_) | |_| | | (_| | | |  __/ | | |  __/ (_| | |   
- \__, |\___/ \__,_|  \__,_|_|  \___| |_|  \___|\__,_|_|   
- |___/                              
-
--->
 <!DOCTYPE html>
 
 <html lang="ar">
@@ -32,7 +20,7 @@
 <body>
     <button class="openbtn" onclick="openNav()">&#9776;</button>
 
-    <div id="side_bar" class="sidebar">
+    <div id="MYSIDE" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">HOME</a>
         <a href="studio.html">STUDIO</a>
