--- a/html/night_version/shit/shit.html
+++ b/html/night_version/shit/shit.html
@@ -22,7 +22,7 @@
 
         
     <div>
-        <img id="frame" src="frame.png" alt=" ">
+        <img id="frame" src="images/frame.png" alt=" ">
        
     </div>
     <div id="background"></div>
