--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -126,6 +126,7 @@
     </div>
 </div>
 
+
 <div class="article">
     <h2>العالم يحترق</h2>
     <div class="article-content">
@@ -149,9 +150,49 @@
             <br> ولاتنتهي التفاصيل
         </p>
     </div>
+</div>
+
+    <div class="article">
+        <h2>لاتخافي</h2>
+        <div class="article-content">
+            <p> أعيش أيام قذرة
+                <br> من حيث أتيت لا وجود للزمان 
+                <br> الثواني تصبح ساعات 
+                <br> و الأعوام لحظات قصيرة و أحيانًا تطير 
+                <br> لذلك يجب أن نبدأ بشيء جديد 
+                <br> كلماتنا الخادعة سنستبدلها 
+                <br> بالموسيقى و الالوان
+                <br> التي تطفوا كالعطور في الهواء العنبري 
+                <br> لذلك لاتخافي 
+                <br> لا تخافي الأن كل شيء أنتهى
+                <br> حطمت قيود مخاوفكِ المميتة
+                <br>لتتحرري منها الى الأبد . 
+                <br>  و تجد من جديد طمأنينة الماضي
+                <br> لا تخافي الأن كل شيء أنتهى 
+                <br> دعي دموعك تسيل للمرة الاخيرة
+                <br> لتتحرري منها الى الأبد 
+                <br>و تنضم الى العالم الذي منه أتيت أنا 
+                <br> فمكانها ليس بيننا 
+                
+      
+            </p>
+        </div>
+    </div>
+
 
     <script src="js/text.js"></script>
 
 </body>
 
 </html>
+
+
+
+
+
+    <script src="js/text.js"></script>
+
+</body>
+
+</html>
+
