--- a/html/day_version/studio.html
+++ b/html/day_version/studio.html
@@ -15,22 +15,24 @@
 
   
   <div class="gallery">
-    <img src="/images/21.jpg" alt="Photo " onclick="openImage('/images/21.jpg')">
-    <img src="/images/2.jpg" alt="Photo " onclick="openImage('/images/2.jpg')">
-    <img src="/images/3.jpg" alt="Photo " onclick="openImage('/images/3.jpg')">
-    <img src="/images/4.jpg" alt="Photo " onclick="openImage('/images/4.jpg')">
-    <img src="/images/5.jpg" alt="Photo " onclick="openImage('/images/5.jpg')">
-    <img src="/images/6.jpg" alt="Photo " onclick="openImage('/images/6.jpg')">
-    <img src="/images/9.jpg" alt="Photo " onclick="openImage('/images/9.jpg')">
-    <img src="/images/11.jpg" alt="Photo " onclick="openImage('/images/11.jpg')">
-    <img src="/images/12.jpg" alt="Photo " onclick="openImage('/images/12.jpg')">
-    <img src="/images/13.jpg" alt="Photo " onclick="openImage('/images/13.jpg')">
-    <img src="/images/15.jpg" alt="Photo " onclick="openImage('/images/15.jpg')">
-    <img src="/images/16.jpg" alt="Photo " onclick="openImage('/images/16.jpg')">
-    <img src="/images/17.jpg" alt="Photo " onclick="openImage('/images/17.jpg')">
-    <img src="/images/18.jpg" alt="Photo " onclick="openImage('/images/18.jpg')">
-    <img src="/images/19.jpg" alt="Photo " onclick="openImage('/images/19.jpg')">
-    <img src="/images/20.png" alt="Photo " onclick="openImage('/images/20.png')">
+    <img src="/images/22s.png" alt="Photo " onclick="openImage('/images/22.jpg')">
+    <img src="/images/21s.png" alt="Photo " onclick="openImage('/images/21.png')">
+    <img src="/images/2s.png" alt="Photo " onclick="openImage('/images/2.jpg')">
+    <img src="/images/3s.png" alt="Photo " onclick="openImage('/images/3.jpg')">
+    <img src="/images/4s.png" alt="Photo " onclick="openImage('/images/4.jpg')">
+    <img src="/images/5s.png" alt="Photo " onclick="openImage('/images/5.jpg')">
+    <img src="/images/6s.png" alt="Photo " onclick="openImage('/images/6.jpg')">
+    <img src="/images/9s.png" alt="Photo " onclick="openImage('/images/9.jpg')">
+    <img src="/images/11s.png" alt="Photo " onclick="openImage('/images/11.jpg')">
+    <img src="/images/12s.png" alt="Photo " onclick="openImage('/images/12.jpg')">
+    <img src="/images/13s.png" alt="Photo " onclick="openImage('/images/13.jpg')">
+    <img src="/images/14s.png" alt="Photo " onclick="openImage('/images/14.jpg')">
+    <img src="/images/15s.png" alt="Photo " onclick="openImage('/images/15.jpg')">
+    <img src="/images/16s.png" alt="Photo " onclick="openImage('/images/16.jpg')">
+    <img src="/images/17s.png" alt="Photo " onclick="openImage('/images/17.jpg')">
+    <img src="/images/18s.png" alt="Photo " onclick="openImage('/images/18.jpg')">
+    <img src="/images/19s.png" alt="Photo " onclick="openImage('/images/19.jpg')">
+    <img src="/images/20s.png" alt="Photo " onclick="openImage('/images/20.png')">
 
 
 
