--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -23,7 +23,7 @@
         .additional-info {
             margin-top: 20px;
             font-size: 14px;
-            display:contents;
+            display: contents;
         }
         a {
             color: #007BFF;
@@ -49,7 +49,7 @@
     </div>
 
     <div class="additional-info">
-        <p>come back later or try, <a href="game/shit.html">get your shit together</a>.</p>
+        <p>come back later or try, <a href="game/****.html">get your shit together</a>.</p>
     </div>
 
     <script>
@@ -57,8 +57,19 @@
             return `${hour.toString().padStart(2, '0')}:${minute.toString().padStart(2, '0')}`;
         }
 
-        function updateOpeningHours() {
-            const now = new Date();
+        async function getServerTime() {
+            try {
+                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/London'); // Replace with your server endpoint
+                const data = await response.json();
+                return new Date(data.datetime);
+            } catch (error) {
+                console.error('Error fetching server time:', error);
+                return new Date();
+            }
+        }
+
+        async function updateOpeningHours() {
+            const now = await getServerTime();
 
             const openingTimes = {
                 mondayFriday: { open: 8, close: 20 },
