--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="additional-info">
-        <p>come back later or try, <a href="game/****.html">get your shit together</a>.</p>
+        <p>come back later or try, <a href="game/shit.html">get your shit together</a>.</p>
     </div>
 
     <script>
