--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -32,5 +32,24 @@
     <script src="js/index.js">
 
 </script>
+
+<script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+<df-messenger
+  location="europe-west2"
+  project-id="plasma-apex-396222"
+  agent-id="425f96bb-8d7b-458c-b8c4-860927090bd4"
+  language-code="en">
+  <df-messenger-chat-bubble
+   chat-title="TALK TO SUDO">
+  </df-messenger-chat-bubble>
+</df-messenger>
+<style>
+  df-messenger {
+    z-index: 999;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+filter: grayscale(1);  }
+</style>
 </body>
 </html>
