--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -6,6 +6,18 @@
     <meta charset="UTF-8">
     <title>TEXT</title>
 </head>
+
+
+
+<div id="MYSIDE" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">HOME</a>
+    <a href="studio.html">STUDIO</a>
+    <a href="text.html">TEXT</a>
+  </div>
+  <button class="openbtn" onclick="openNav()">&#9776;</button>
+
+
 <body>
     <div class="container">
         <div class="article">
@@ -152,45 +164,12 @@
     </div>
 </div>
 
-    <div class="article">
-        <h2>لاتخافي</h2>
-        <div class="article-content">
-            <p> أعيش أيام قذرة
-                <br> من حيث أتيت لا وجود للزمان 
-                <br> الثواني تصبح ساعات 
-                <br> و الأعوام لحظات قصيرة و أحيانًا تطير 
-                <br> لذلك يجب أن نبدأ بشيء جديد 
-                <br> كلماتنا الخادعة سنستبدلها 
-                <br> بالموسيقى و الالوان
-                <br> التي تطفوا كالعطور في الهواء العنبري 
-                <br> لذلك لاتخافي 
-                <br> لا تخافي الأن كل شيء أنتهى
-                <br> حطمت قيود مخاوفكِ المميتة
-                <br>لتتحرري منها الى الأبد . 
-                <br>  و تجد من جديد طمأنينة الماضي
-                <br> لا تخافي الأن كل شيء أنتهى 
-                <br> دعي دموعك تسيل للمرة الاخيرة
-                <br> لتتحرري منها الى الأبد 
-                <br>و تنضم الى العالم الذي منه أتيت أنا 
-                <br> فمكانها ليس بيننا 
-                
-      
-            </p>
-        </div>
-    </div>
-
 
     <script src="js/text.js"></script>
 
 </body>
 
 </html>
-
-
-
-
-
-    <script src="js/text.js"></script>
 
 </body>
 
