--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -37,10 +37,10 @@
 <df-messenger
   location="europe-west2"
   project-id="plasma-apex-396222"
-  agent-id="425f96bb-8d7b-458c-b8c4-860927090bd4"
+  agent-id="f3efa131-5110-45a2-89a6-cc5ba03b2a99"
   language-code="en">
   <df-messenger-chat-bubble
-   chat-title="TALK TO SUDO">
+   chat-title="Small talk">
   </df-messenger-chat-bubble>
 </df-messenger>
 <style>
@@ -49,7 +49,8 @@
     position: fixed;
     bottom: 16px;
     right: 16px;
-filter: grayscale(1);  }
+    filter: grayscale(1);
+  }
 </style>
 </body>
 </html>
