--- a/html/night_version/index.html
+++ b/html/night_version/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,15 +16,18 @@
             margin: 0;
             color: #333;
         }
+
         .opening-hours {
             text-align: center;
             margin-top: 20px;
         }
-        .additional-info {
+
+        #additional-info {
             margin-top: 20px;
             font-size: 14px;
-            display: contents;
+            display: inline-block; /* or other appropriate display property */
         }
+
         a {
             color: #007BFF;
             text-decoration: none;
@@ -36,83 +40,21 @@
         }
     </style>
 </head>
+
 <body>
 
     <h1>Opening Hours (UTC+1)</h1>
 
     <div class="opening-hours">
-        <p><strong>Monday - Friday:</strong> <span id="mondayFriday"></span></p>
-        <p><strong>Saturday:</strong> <span id="saturday"></span></p>
+        <p><strong>Monday - Friday:</strong> 8:00 - 20:00</p>
+        <p><strong>Saturday:</strong> 10:00 AM - 20:00</p>
         <p><strong>Sunday:</strong> Closed</p>
-        <p id="time-left"></p>
     </div>
 
-    <div class="additional-info">
+    <div id="additional-info">
         <p>come back later or try, <a href="game/shit.html">get your shit together</a>.</p>
     </div>
 
-    <script>
-        function formatTime(hour, minute) {
-            return `${hour.toString().padStart(2, '0')}:${minute.toString().padStart(2, '0')}`;
-        }
-
-        async function getServerTime() {
-            try {
-                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Oslo');
-                const data = await response.json();
-                return new Date(data.utc_datetime);
-            } catch (error) {
-                console.error('Error fetching server time:', error);
-                return new Date();
-            }
-        }
-
-        async function updateOpeningHours() {
-            const now = await getServerTime();
-
-            const openingTimes = {
-                mondayFriday: { open: 8, close: 20 },
-                saturday: { open: 10, close: 18 }
-            };
-
-            const currentDay = now.getDay();
-            let nextOpeningDay = currentDay;
-
-            if (currentDay === 0) {
-                nextOpeningDay = 1; // Monday
-            } else if (currentDay >= 1 && currentDay <= 5) {
-                nextOpeningDay = 6; // Saturday
-            } else {
-                nextOpeningDay = 1; // Monday
-            }
-
-            const nextOpeningTime = openingTimes[nextOpeningDay === 1 ? 'mondayFriday' : 'saturday'].open;
-
-            let timeLeftMillis = nextOpeningTime * 60 * 60 * 1000 - now.getTime();
-
-            if (timeLeftMillis < 0) {
-                // If the current time is after closing, calculate time until the next day's opening
-                const tomorrowOpeningTime = openingTimes[nextOpeningDay === 1 ? 'mondayFriday' : 'saturday'].open;
-                const tomorrowOpeningMillis = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, tomorrowOpeningTime, 0, 0).getTime();
-                timeLeftMillis = tomorrowOpeningMillis - now.getTime();
-            }
-
-            const hoursLeft = Math.floor(timeLeftMillis / (1000 * 60 * 60));
-            const minutesLeft = Math.floor((timeLeftMillis % (1000 * 60 * 60)) / (1000 * 60));
-            const secondsLeft = Math.floor((timeLeftMillis % (1000 * 60)) / 1000);
-
-            document.getElementById('mondayFriday').textContent = `${formatTime(openingTimes.mondayFriday.open, 0)} AM - ${formatTime(openingTimes.mondayFriday.close, 0)} PM`;
-            document.getElementById('saturday').textContent = `${formatTime(openingTimes.saturday.open, 0)} AM - ${formatTime(openingTimes.saturday.close, 0)} PM`;
-
-            document.getElementById('time-left').textContent = `${hoursLeft}:${minutesLeft.toString().padStart(2, '0')}:${secondsLeft.toString().padStart(2, '0')}`;
-        }
-
-        // Update the opening hours every second
-        setInterval(updateOpeningHours, 1000);
-
-        // Initial update
-        updateOpeningHours();
-    </script>
-
 </body>
+
 </html>
