--- a/html/day_version/index.html
+++ b/html/day_version/index.html
@@ -33,5 +33,14 @@
 
 </script>
 
+
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  chat-title="TALK TO SUDO"
+  agent-id="4ee3b31b-27d8-4fbd-84d5-d4cc2718adaa"
+  language-code="en"
+  df-messenger-button-titlebar-color="black"
+  chat-icon="images/favicon.png"
+></df-messenger>
 </body>
 </html>
