--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -7,8 +7,6 @@
     <title>TEXT</title>
 </head>
 
-
-
 <div id="MYSIDE" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">HOME</a>
@@ -163,6 +161,208 @@
         </p>
     </div>
 </div>
+
+<div class="article">
+    <h2>وداعاً ماركو</h2>
+    <div class="article-content">
+        <p> وداعاً ماركو 
+            <br>ماركو .. أسمعني جيداً
+            <br>من الأن فصاعداً لن أقف على شرفة المنزل لأنتظرك
+            <br>لن ألقي لك قبلات حارة من الأعلى
+            <br>ولتعلم بأني صنعت رجل من ورق
+            <br>وهو الأن يملأ مكانك الفارغ في السرير
+            <br>أن ذهبت ياماركو .. لن تُقفل الحانات
+            <br>ولن تتوقف الحروب . ولن تصمت الناس 
+            <br>وستشرق الشمس يومياً من شرفتي الصغيرة
+            <br>ولن أنتظر القمر لكي يٌطل منها
+            <br>وسأمسح جميع العبارت التي كتبتها على الحائط
+            <br>ولن يموت الربيع . . كل شيء باقي ياماركو
+            <br>كل شي باقي .. بك وبدونك
+            <br> ماركو ؟
+            <br>ماهي مشكلتك, قل شيء؟
+            <br>هيا قل لي أنك لاتريد الذهاب
+            <br>ماركو ! هيا .. الى ماذا تنظر ؟ 
+            <br>بماذا تفكر .. ؟
+            <br>
+        </p>
+    </div>
+</div>
+
+<div class="article">
+    <h2>سبتمبر</h2>
+    <div class="article-content">
+        <p> الورود التي تخرج من الأرض في هذا الشهر
+        <br> ليست كالباقي فهي تتحمل قساوة الطقس المتقلب 
+        <br> أنا لا أحب الورود ولكن أحب هذا الشهر 
+        <br> بدأت أشعر بلفحات الهواء الباردة والساخنة 
+        <br> إنه شهر الخمر 
+        <br> إنه سبتمبر 
+        <br> في هذا الشهر يقطفون العنب ليصنعو منه خمر
+        <br> الخمر الأحمر الذي حدثتكِ عنه لمرات عديدة
+        <br> الأن يكون مخزن بدفئ ضمن براميل خشبية جميلة 
+        <br> عاد سبتمبر وأصبحت الشمس لطيفة كأنتِ
+        <br>تُنير من بعيد دون أن تحرقني 
+        <br> عاد سبتمبر 
+        <br> ولم يبقى ليمون على الأشجار إنها فرصتك لترحلي 
+        <br> بالنسبة لي كل الأشهر هي أنتِ 
+        <br> ولكن أنا لكِ كل سبتمبر
+        <br> لاأستطيع أن أضع نقطة
+        <br> فسبتمبر سيأتي دائماً 
+        </p>
+    </div>
+</div>
+
+<div class="article">
+    <h2>من الذاكرة</h2>
+    <div class="article-content">
+        <p> تعود من العمل منهك تخرج مفتاحك الذي تربطه بعنقك كي لايضيع ، فأنت مازلت صغير
+            على المسئولية 
+        <br> تنظر للباب وتريد أن تدخل المفتاح داخل القفل فتجد لصاقه على الباب ، ولكن الكتابة
+        <br> عليها غير واضحة ، الكهرباء مقطوعة كالعادة ، تخرج علبة السجائر من جواربك وتخرج
+        <br> القداحة منها ، تشغل القداحة وتبدأ بقراءة اللصاقة 
+        <br> يجب أخلاء المنزل قبل نهاية الشهر الحالي 
+        <br> جميل جداً ، بل رائع
+        <br> تدخل للمنزل تجد أفراد الأسرة تجتمع في حديقة المنزل جميعهم جالسين صامتين وجه
+        أبيك لايُفسر  
+        <br> تجلس وتقول : هل ماهو مكتوب صحيح هل يجب أخلاء المنطقة كلها هل سيهدمون
+        المنازل جميعها 
+        <br> لا أحد يرد الجميع صامت 
+        <br> بابا ! ماذا يحصل قل شيء ما ، إذن هذا صحيح لا أحد يريد الأجابة 
+        <br> إين سنذهب؟
+        <br> لايهم 
+        <br> تذهب لغرفتك وتجلس حتى الثانية صباحاً ومن ثم تغفو من تعبك وتستيقظ
+        باكراً وتذهب الى عملك وكأن شي لم يحدث 
+        <br> ويأتي نهاية الشهر تستيقظ صباحاً على أصوات الجرافات والشاحنات تخرج مسرعاً
+        وتجدهم يقومون بقطع المياه عن أهل الحي لأجبارهم على الرحيل 
+        <br> والجميع مجتمع في المكان هناك من يبكي ومن يضحك وهناك من يقاتل للدفاع
+        عن منزله
+        <br> ويصرخ رجل كبير بالعمر قائل
+        <br> هذه بيتي لن أغادر أعطوني غيره . إين أذهب بعائلتي لدي أولاد لدي نساء
+        <br> هل أنصب خيمة على الطريق وانام بها كي يكون سعيد حضرة محافظكم 
+        <br> يقوم رجال الشرطة بأعتقال هذا الرجل 
+        <br> لم يعد أحد يجرؤ على فتح فمه من جديد الجميع صمت 
+        <br> يأتي شخص رفيع المستوى ويبدأ بتهديد الناس بهدم المنازل فوق الرؤوس
+        <br> عليكم جميعًا إخلاء المنطقة . لديكم 24 ساعة وإلا ....
+        <br> ياه ، كنت أحسبها سوريا ولكن أخطأت هذه فلسطين .
+        <br> نقلنا منزلنا كلها قبل بزوغ الفجر ، وذهب الجميع وبقيت أشاهد من بعيد
+        <br> كيف يقومون بتحطيم كل شيء
+        <br> حتى بدأوا بمنزلنا 
+        <br>حينها أدركت أنه لايوجد إنتماء ولو كان ذلك موجود لديك يأخذونه منك 
+        <br> التفاصيل في ذاكرتي ، مازال مكان منزلنا عراء
+        <br>لم يقم عليه إي مشروع حتى الان
+    </div>
+</div>
+
+
+
+<div class="article">
+    <h2>لاتخافي</h2>
+    <div class="article-content">
+      <p> من حيث أتيت لا وجود للزمان
+        <br>الثواني تصبح ساعات
+        <br>و الأعوام لحظات قصيرة و أحيانًا تطير
+        <br>و الأعوام لحظات قصيرة و أحيانًا تطير
+        <br> كلماتنا الخادعة سنستبدلها بالموسيقى و الالوان
+        <br>التي تطفوا كالعطور في الهواء العنبري
+        <br>لذلك لاتخافي
+        <br>لا تخافي الأن كل شيء أنتهى
+        <br>حطمت قيود مخاوفكِ المميتة
+        <br>لتتحرري منها الى الأبد
+        <br>و تجد من جديد طمأنينة الماضي
+        <br>لا تخافي الأن كل شيء أنتهى
+        <br>دعي دموعك تسيل للمرة الاخيرة
+        <br>لتتحرري منها الى الأبد
+        <br>و تنضم الى العالم الذي منه أتيت أنا 
+        <br>فمكانها ليس بيننا
+        </p>
+    </div>
+</div>
+
+
+
+<div class="article">
+    <h2>مشيئة الضعفاء</h2>
+    <div class="article-content">
+      <p> أستطيع مشاهدتها جيداً
+      <br> وأنا مُستلقي على هذا العشب الرطب 
+      <br> أراقبها جيداً . . أستطيع أن اتححسها 
+      <br> رائحتها تملأ الحديقة
+      <br>مازلت أحمل عبء جسدها الثقيل في أفكاري
+      <br>منذ النفس الأول ، والفجر الأول
+      <br>وهي تسكن داخلي العميق
+      <br>ربما أنهكها الهروب 
+      <br>ولكن مازلت مرتبطة مابين السماء والأرض
+      <br>لاتستطيع الأفلات
+      <br>سأطلق سراحها في يوماً ما
+      <br> وأمنحها ماتريد
+      <br> ولتكن مشيئة الضعفاء
+        </p>
+    </div>
+</div>
+
+
+<div class="article">
+    <h2>بحر</h2>
+    <div class="article-content">
+      <p>إنها الواحدة صباحاً
+      <br>وهذا هو البحر
+      <br> رميت به جميع زجاجات الخمر منذ ولادتي
+      <br> ورقصت على الشاطئ كالمجنون
+      <br>ولكن لايهدأ
+      <br>مازالت الأمواج تصارع اليابسة 
+      <br>ومازل يمتص الضوء من الأفق
+      <br> مظلم وغامض يمارس الغضب في العلن
+      <br>عجباً منك يابحر
+      <br>خارجك مشاكس كالطفل
+      <br>وداخلك هادئ كالعجوز
+      <br> ومع ذلك أنت رائع
+      <br>ولكن انا أفُضلَ غضب الغُيوم
+      <br>فهي تغضب مرة واحدة
+      <br>ومن ثم تختفي
+      <br>ومع ذلك
+      <br> سأبقى أرمي لكجميع زجاجات الخمر
+        </p>
+    </div>
+</div>
+
+<div class="article">
+    <h2>من بعيد</h2>
+    <div class="article-content">
+      <p> كم هي معقدة الحياة الإجتماعية. صعب جداً أن تكون إجتماعي دائماً 
+     <br>فأنت لاتلاحظ التفاصيل مطلقًا
+     <br>دائمًا تُسرق منك أجمل الأشياء
+     <br>متى اخر مرة نظرت فيها من حولك
+     <br> هل هم حقًا يحبونك ؟
+     <br>لايهم . . سأجلس في غرفتي قليلاً 
+     <br>في فناء منزلي يوجد جدار ضخم
+     <br>يمنع الشمس صباحاً من الشروق .
+     <br>وخلف هذا الجدار يوجد حديقة جميلة .
+     <br>دائماً الشمس تصل متأخرة ، تشرق لدى الجميع
+     <br>واخر شخص تصله هو أنا
+     <br>قررت أن أزيل هذا الحائط 
+     <br>ونجحت في ذلك
+     <br>أصبحت الشمس تشرق في غرفتي
+     <br>أستيقظ في كل صباح وأجلس بقرب النافذة
+     <br>أراقبها وهي تملأ نصف غرفتي
+     <br>أراقب الناس في الحديقة وهي جالسة
+     <br>من بعيد .. من بعيد
+     <br>كل الأشياء من بعيد تبدو جميلة جداً
+     <br>بمافيهم الناس
+     <br>إلا شيء واحد وهو أنتِ 
+     <br>يجب أن تكوني قريبة بمافيه الكفاية 
+     <br>لدرجة أن أستطيع أن أشعر بنفسك
+     <br>نجلس سوياً ويغطينا ضوء الشمس الأصفر
+     <br>القادم من بعيد . من بعيد
+     <br>كأنتِ . من بعيد من بعيد 
+     <br>هل أنتِ قادمة فعلاً
+     <br>هل يوجد جدار في حياتك يمنعك من المجيئ ؟
+     <br>أصبحت الشمس تملأ غرفتي
+     <br> لاتفوّتي الفرصة
+     <br> أنتظركِ
+        </p>
+    </div>
+</div>
+
 
 
     <script src="js/text.js"></script>
