--- a/html/day_version/text.html
+++ b/html/day_version/text.html
@@ -365,6 +365,61 @@
 
 
 
+<div class="article">
+    <h2> منزل الأيتام</h2>
+    <div class="article-content">
+      <p> داخل هذا البيت المهجور الغبار والعفن يملأ المكان
+     <br>لايمكننى سماع إلا قليل من حطام الموسيقا في هذا البيت
+     <br>في هذا البيت كان هناك حياة سعيدة في يوم من الأيام
+     <br>كانت تأتي فتاة في كل عطلة وتعزف على هذا البيانو القديم
+     <br> أستطيع مشاهدتها في هذه اللحظة
+     <br>ستطيع تخيلها وهي جالسة على الكرسي الخشبي وأصابعها على البيانو
+     <br>أستطيع حتى الأن أن اتذكر تفاصيلها بدقة
+     <br>كيف كانت تغمض عيناها وهي تعزف كي لا يراها أطفال المنزل وهي تبكي
+     <br>لكن أنا لم أكن طفل ، كنت طفل كبير حينها أو رجل صغير لا أعلم
+     <br>أقف خارجاً والثلج يغطي نصفي
+     <br>أضع رأسي على بلور المنزل وأستمع وأشاهدها
+     <br>لم أكن أجني الكثير من المال في ذلك الحي
+     <br>كنت قصير القامة والناس لاترى ما اعرضه للبيع على الرصيف
+     <br>ولكن كنت سعيد في كل يوم عطلة
+     <br>ليتني كنت يتم بلا اب وام ، ليتني كنت معهم في الداخل أجلس بجانبهم
+     <br> كيف لي أن اعرفها الأن
+     <br> إين أبحث عنها
+     <br> كيف أستطيع أن اخبرها بأنها كانت تأسر قلبي في كل عطلة؟
+     <br>كيف لي أن أقول لها بأني كنت اشعر بالدفى خارجاً وأنا مغطى بالثلوج؟
+    </p>
+    </div>
+</div>
+
+<div class="article">
+    <h2>جسد</h2>
+    <div class="article-content">
+      <p> غطى جسدها الأبيض ، والزهور بجانبها 
+     <br>وقف الجميع خلف نعشها الخشبي الأسود 
+     <br>لحظة من السكون تُحيط بالمكان
+     <br>بدأت تُعزف موسيقا الخُلود في الفضاء
+     <br>لأستقبالها
+     <br>ذهَبْت حيث لا أستطيع رؤيتها من جديد
+     <br>ي شخص من أي وقت مضى كان هنا
+     <br>ورحل عن هذه الأرض
+     <br>الجميع كانت محطتهم الأخيرة هنا 
+     <br>لقد عشنا معًا داخل نجم ما في الماضي
+     <br>ستعودين لمكانك الصحيح
+     <br> الى النجو
+     <br> وانا سأمضي ماتبقى من وقت بالنظر للسماء ليلاً
+     <br> أراقب غبار جسدك وهو يطير في السماء
+     <br> أراقبه وهو يُشكل لوحة ضمن هذا الكون
+     <br> أراقبك من بعيد
+     <br> من نافذة غرفتي الصغيرة
+
+        </p>
+    </div>
+</div>
+
+
+
+
+
     <script src="js/text.js"></script>
 
 </body>
