--- a/html/day_version/studio.html
+++ b/html/day_version/studio.html
@@ -15,7 +15,7 @@
 
   
   <div class="gallery">
-    <img src="/images/22s.png" alt="Photo " onclick="openImage('/images/22.jpg')">
+<!--<img src="/images/22s.png" alt="Photo " onclick="openImage('/images/22.jpg')">...-->
     <img src="/images/21s.png" alt="Photo " onclick="openImage('/images/21.png')">
     <img src="/images/2s.png" alt="Photo " onclick="openImage('/images/2.jpg')">
     <img src="/images/3s.png" alt="Photo " onclick="openImage('/images/3.jpg')">
@@ -32,7 +32,7 @@
     <img src="/images/17s.png" alt="Photo " onclick="openImage('/images/17.jpg')">
     <img src="/images/18s.png" alt="Photo " onclick="openImage('/images/18.jpg')">
     <img src="/images/19s.png" alt="Photo " onclick="openImage('/images/19.jpg')">
-    <img src="/images/20s.png" alt="Photo " onclick="openImage('/images/20.png')">
+   <!-- <img src="/images/20s.png" alt="Photo " onclick="openImage('/images/20.png')">..-->
 
 
 
